--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,18 @@ project(Bammi)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "-Wall")
 
-set(SOURCE_FILES main.cpp Board.cpp Board.h AI.cpp AI.h CursesScreen.cpp CursesScreen.h CoutScreen.cpp CoutScreen.h Screen.cpp)
+set(SOURCE_FILES
+        src/main.cpp
+        src/Board.cpp
+        src/Board.h
+        src/AI.cpp
+        src/AI.h
+        src/CursesScreen.cpp
+        src/CursesScreen.h
+        src/CoutScreen.cpp
+        src/CoutScreen.h
+        src/Screen.cpp
+    )
 add_executable(Bammi ${SOURCE_FILES})
 
 target_link_libraries(Bammi ncurses)
